<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context="cafelatina.my.cafelatina.EntryActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/tableName0"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/tableName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="#ffffff"
        android:hint="@string/tableName"
        android:inputType="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/serverName0"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/serverName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="#ffffff"
        android:gravity="center"
        android:hint="@string/serVerName"
        android:inputType="" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startOrder"
        android:text="@string/next" />

</LinearLayout >