<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="cafelatina.my.cafelatina.Popup">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="168dp"
        android:layout_weight="1"
        android:text="@string/Are_you_sure" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="132dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/cancel"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:text="@string/send"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="147dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="96dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:text="@string/cancel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp" />
</RelativeLayout>
